  configuration variable sets the maximum number of revisions of a page that
  will be checked against every new edit. Set this to 0 to disable the feature
  entirely.
* …

==== Changed configuration ====
* …

==== Removed configuration ====
* $wgUseTwoButtonsSearchForm - This setting, deprecated in 1.35, has been
  removed.
* …

=== New user-facing features in 1.36 ===
* …

=== New developer features in 1.36 ===
* …

=== External library changes in 1.36 ===
* …

==== New external libraries ====
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* pear/mail_mime was upgraded from 1.10.8 to 1.10.9.
* wikimedia/html-formatter was upgraded from 1.0.2 to 2.0.0.
* …

===== Changed development-only external libraries =====
* …

==== Removed external libraries ====
* The html5shiv library has been removed, as support for Internet Explorer 8 has
  been dropped.
* …

=== Bug fixes in 1.36 ===
* …

=== Action API changes in 1.36 ===
* …

=== Action API internal changes in 1.36 ===
* …

=== Languages updated in 1.36 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* …

=== Breaking changes in 1.36 ===
* Multiple methods that fell back to the $wgUser global variable were
  individually hard deprecated previously. The following have now been removed:
  - ApiTestCase::doLogin
  - All methods of the old SpecialPageFactory; the entire class was removed
* The global function `wfWaitForSlaves`, deprecated in 1.27 and hard-deprecated
  in 1.35, has been removed. Use LBFactory::waitForReplication() instead.
* The global variable $wgMemc, deprecated since 1.35, has been removed.
  Usage should generally be migrated to WANObjectCache, or if you really need
  the internal object, use ObjectCache::getLocalClusterInstance instead.